--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,14 +1,12 @@
-name: Go
+name: Release
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
 
-  build:
+  release:
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -18,8 +16,25 @@ jobs:
       with:
         go-version: 1.17
 
-    - name: Build
-      run: go build -v ./...
+    - name: Build amd64
+      working-directory: ./src/binance-proxy
+      run: go build -o binance-proxy .
 
-    - name: Test
-      run: go test -v ./...
+    - name: Build windows
+      working-directory: ./src/binance-proxy
+      run: CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build -o binance-proxy-windows.exe .
+
+    - name: Build darwin
+      working-directory: ./src/binance-proxy
+      run: CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -o binance-proxy-darwin .
+
+    - name: Release
+        working-directory: ./src/binance-proxy
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            binance-proxy
+            binance-proxy-windows.exe
+            binance-proxy-darwin
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
