--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,7 +1,6 @@
 name: Release
 
-on:
-  push:
+on: push
 
 jobs:
 
@@ -29,8 +28,8 @@ jobs:
       run: CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -o binance-proxy-darwin .
 
     - name: Release
-      working-directory: ./src/binance-proxy
       uses: softprops/action-gh-release@v1
+      working-directory: ./src/binance-proxy
       with:
         files: |
           binance-proxy
