--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,6 +5,7 @@ on: push
 jobs:
 
   release:
+    if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -16,15 +17,15 @@ jobs:
 
     - name: Build amd64
       working-directory: ./src/binance-proxy
-      run: go build -o binance-proxy .
+      run: go build -o ../../binance-proxy .
 
     - name: Build windows
       working-directory: ./src/binance-proxy
-      run: CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build -o binance-proxy-windows.exe .
+      run: CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build -o ../../binance-proxy-windows.exe .
 
     - name: Build darwin
       working-directory: ./src/binance-proxy
-      run: CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -o binance-proxy-darwin .
+      run: CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build -o ../../binance-proxy-darwin .
 
     - name: Release
       uses: softprops/action-gh-release@v1
