redesign of command-line params and logging.
- switched `flags` to `go-flags`
- reworked command-line params along with help message
- params can be supplied in short and long form
- switched log-format to include full timestamp
- added trace loglevel messages
- changed port parameter to be `int`
- fixed `SA1017` - buffer size for channel
- change `Class` for SPOT/FUTURES from `int` to `string`
- changed `lastPrice` in `ticker/24hr` to be `askPrice` from `bookTicker`
- added comprehensive `README.md`
- fixed `Dockerfile`
- added `Dockerfile.goreleaser` for Github Actions

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -34,7 +34,7 @@ changelog:
 dockers:
 - 
   image_templates: ["docker.io/nightshift2k/{{ .ProjectName }}:{{ .Version }}-amd64"]
-  dockerfile: Dockerfile
+  dockerfile: Dockerfile.goreleaser
   use: buildx
   build_flag_templates:
   - --platform=linux/amd64
@@ -49,7 +49,7 @@ dockers:
 - 
   image_templates: ["docker.io/nightshift2k/{{ .ProjectName }}:{{ .Version }}-arm64v8"]
   goarch: arm64
-  dockerfile: Dockerfile
+  dockerfile: Dockerfile.goreleaser
   use: buildx
   build_flag_templates:
   - --platform=linux/arm64/v8
