--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,11 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-
+cover.*
 # Dependency directories (remove the comment below to include it)
 vendor/
 dist/
+bin/
 
 # IDE's
 /.idea/*
